apps/core/kyverno/patch-chart-jobs.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: kyverno-admission-controller-metrics
  namespace: kyverno
$patch: delete
---
apiVersion: v1
kind: Pod
metadata:
  name: kyverno-cleanup-controller-liveness
  namespace: kyverno
$patch: delete
---
apiVersion: v1
kind: Pod
metadata:
  name: kyverno-cleanup-controller-metrics
  namespace: kyverno
$patch: delete
---
apiVersion: v1
kind: Pod
metadata:
  name: kyverno-cleanup-controller-readiness
  namespace: kyverno
$patch: delete
---
apiVersion: v1
kind: Pod
metadata:
  name: kyverno-reports-controller-metrics
  namespace: kyverno
$patch: delete
