apps/core/kyverno/cilium-networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kyverno-admission-apiserver
  namespace: kyverno
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: admission-controller
  ingress:
    - fromEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "9443"
              protocol: TCP
